[metadata]
name = idyntree
description = Multibody Dynamics Library designed for Free Floating Robots.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = LGPL
platforms = any
url = https://github.com/robotology/idyntree

project_urls =
    Tracker = https://github.com/robotology/idyntree/issues
    Documentation = https://robotology.github.io/idyntree/master/
    Source = https://github.com/robotology/idyntree

keywords =
    robotics
    dynamics
    free-floating
    floating-base
    robot
    robotic-library
    multibody-dynamics

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Framework :: Robot Framework
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
    numpy
